force-app/main/default/objects/Participant_Reply__c/Participant_Reply__c.object-meta.xml
<CustomObject>
    <label>Participant Reply</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Participant Reply Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Replies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>