force-app/main/default/objects/Participant_Reply__c/fields/Game_Unit__c.field-meta.xml
<CustomField>
    <fullName>Game_Unit__c</fullName>
    <label>Game Unit</label>
    <referenceTo>Game_Unit__c</referenceTo>
    <relationshipLabel>Participant Replies</relationshipLabel>
    <relationshipName>Participant_Replies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>