force-app/main/default/objects/Participant_Reply__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Participant Replies</relationshipLabel>
    <relationshipName>Participant_Replies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>