force-app/main/default/objects/Participant_Reply__c/fields/Unit_Item__c.field-meta.xml
<CustomField>
    <fullName>Unit_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Item</label>
    <referenceTo>Unit_Item__c</referenceTo>
    <relationshipLabel>Participant Replies</relationshipLabel>
    <relationshipName>Participant_Replies</relationshipName>
    <type>Lookup</type>
</CustomField>